--- a/public/widgets/newWikipedia/wikipedia/stylesheets/master.css
+++ b/public/widgets/newWikipedia/wikipedia/stylesheets/master.css
@@ -1,7 +1,6 @@
 body{
   font-family:helvetica, arial, sans-serif;
   font-size:12px;
-  border:1px solid #cccccc;
 }
 
 .on-the-right{
@@ -15,6 +14,8 @@ body{
 .toolbar{
   background-image:url(../images/toolbarBody.png);
   padding-left:4px;
+  border:1px solid #cccccc;
+  border-bottom:1px solid #ffffff;
 }
 
 .toolbar>div>.button{
@@ -24,6 +25,15 @@ body{
   margin-right:4px;
   margin-top:1px;
   cursor:pointer;
+}
+
+#toolbar-down{
+  font-size:18px;
+  font-weight:bold;
+  color:#333333;
+  text-align:center;
+  font-family:helvetica, serif;
+  text-shadow: #ffffff 0px 1px 1px;
 }
 
 #url{
@@ -53,12 +63,12 @@ body{
 
 #center-field.full{
   margin-right:40px;
-  margin-left:100px;
+  margin-left:68px;
 }
 
 #web-browser { 
 	width:100%;
-	border:none;
+	border:1px solid #cccccc;
 }
 
 .toolbar-body {
