added : history, Wikipedia title

--- a/public/widgets/newWikipedia/wikipedia/stylesheets/master.css
+++ b/public/widgets/newWikipedia/wikipedia/stylesheets/master.css
@@ -32,7 +32,7 @@ body{
   font-weight:bold;
   color:#333333;
   text-align:center;
-  font-family:helvetica, serif;
+  font-family:helvetica, arial, sans-serif;
   text-shadow: #ffffff 0px 1px 1px;
 }
 
