--- a/public/widgets/wiktionary/wiktionary/stylesheets/wiki.css
+++ b/public/widgets/wiktionary/wiktionary/stylesheets/wiki.css
@@ -1,19 +1,47 @@
-#header{
-  display:none;
+body{
+  background:none;
 }
 
-#footmenu{
-  display:none;
+#ghost2{
+  height:8px;
 }
 
-#ghost{
-  display:none;
+#content{
+  margin:0px;
+  border:none;
 }
 
-.thumb{
-  font-size:10px;
+h1{
+  text-align:center;
 }
 
-.message.notice{
-  display:none;
+h3{
+  margin-bottom:0.6em;
+  margin-top:1.5em;
 }
+
+#footer{
+  font-size:0.5em;
+}
+
+
+ul{
+  margin-top:0.8em;
+  margin-bottom:1.2em;
+}
+
+ol li{
+  margin-bottom:1.2em;
+}
+
+ol li li{
+  margin-bottom:0.3em;
+}
+
+#footer{
+  border-top:1px solid black;
+}
+
+#siteSub, #contentSub, #jump-to-nav, .printfooter, .catlinks, #bodyContent > h2, 
+#ColorRect, table, img, .thumb, .message.notice, #column-one, #ghost, #footmenu,
+#header{ display:none }
