--- a/app/views/document_publishing_mailer/notify.erb
+++ b/app/views/document_publishing_mailer/notify.erb
@@ -2,9 +2,9 @@ Hello,
 
 Your document is now published on the Web.
 
-To view your document online: http://uniboard.mnemis.com/documents/publish/<%= @published_document.document_uuid %>
+To view your document online: http://web.getuniboard.com/documents/publish/<%= @published_document.document_uuid %>
 
-To Embed your Uniboard document: <object width="425" height="344" data="http://uniboard.mnemis.com/documents/publish/<%= @published_document.document_uuid %>">
+To Embed your Uniboard document: <object width="440" height="265" data="http://web.getuniboard.com/documents/publish/<%= @published_document.document_uuid %>">
   
 The Uniboard team
 
