--- a/public/uniboard-player/stylesheets/master.css
+++ b/public/uniboard-player/stylesheets/master.css
@@ -143,7 +143,7 @@ input{
 #board-button-last{ background:url(../images/board-button-last.png) center right no-repeat }
 
 .page{ display:inline-block; margin:auto; height:100% }
-#current-page{ width:100%; height:100%; border:1px solid rgb(210, 211, 212); box-shadow: 2px 2px 10px #bbb; -webkit-box-shadow: 2px 2px 10px #bbb; -moz-box-shadow: 2px 2px 10px #bbb }
+#current-page{ width:100%; height:100%; background-color:white; border:1px solid rgb(210, 211, 212); box-shadow: 2px 2px 10px #bbb; -webkit-box-shadow: 2px 2px 10px #bbb; -moz-box-shadow: 2px 2px 10px #bbb }
 
 #thumbnails{ display:block; width:100%; height:32px; overflow:hidden; position:relative; margin-bottom:10px; text-align:center }
 #thumbnails-slider{ position:relative; height:8px; margin-top:24px; margin-bottom:14px }
