--- a/public/uniboard-player/stylesheets/master.css
+++ b/public/uniboard-player/stylesheets/master.css
@@ -32,21 +32,18 @@ input{
   vertical-align:middle;
   letter-spacing:-3px;
   height:31px;
-  width:100%;
 }
 
 .menu.bottom{
   display:block;
-  background-color:rgb(240, 241, 243);
-  padding:0px 10px 0px 10px;
-  border:1px solid rgb(230, 231, 233);
+  position:relative;
+  padding:0px 50px 0px 50px;
   color:#666;
   font-size:12px;
-  height:42px;
-  width:auto;
+  height:55px;
 }
 
-.menu-box{ width:33.3%; height:31px; display:inline-block; vertical-align:middle; margin-top:5px; position:relative }
+.menu-box{ width:33.3%; height:31px; display:inline-block; vertical-align:middle; margin-top:11px; position:relative }
 .menu-box-left{ text-align:left; letter-spacing:2px }
 .menu-box-center{ text-align:center; line-height:30px }
 .menu-box-right{ text-align:right }
@@ -110,6 +107,10 @@ input{
   line-height:normal;
 }
 
+#data-document-author{
+  font-weight:normal;
+}
+
 #document-title ul li{
   border-bottom:1px solid #eee;
   margin-bottom:5px;
@@ -145,7 +146,7 @@ input{
 .page{ display:inline-block; margin:auto; height:100% }
 #current-page{ width:100%; height:100%; background-color:white; border:1px solid rgb(210, 211, 212); box-shadow: 2px 2px 10px #bbb; -webkit-box-shadow: 2px 2px 10px #bbb; -moz-box-shadow: 2px 2px 10px #bbb }
 
-#thumbnails{ display:block; width:100%; height:32px; overflow:hidden; position:relative; margin-bottom:10px; text-align:center }
+#thumbnails{ display:block; padding:0px 50px 10px 50px; height:32px; overflow:hidden; position:relative; text-align:center; background:url(../images/menu-slider-background.png) repeat-x center 13px; }
 #thumbnails-slider{ position:relative; height:8px; margin-top:24px; margin-bottom:14px }
 #thumbnails-slider-handler{ height:28px; width:17px; position:relative; top:-21px; background:url(../images/slider-handler.png) }
 .thumbnails-slider-page{ position:relative; display:block; float:left; height:100%; width:100%; background:url(../images/thumbnails-slider-odd.png) center right }
@@ -206,7 +207,8 @@ input{
   left:0px;
   top:100%;
   width:100%;
-  height:82px;
+  height:96px;
+  background:url(../images/menu-background.png) repeat-x bottom;
 }
 
 #menubottom-input{
