fix menu display

--- a/app/views/document_publishing/show.html.erb
+++ b/app/views/document_publishing/show.html.erb
@@ -96,7 +96,7 @@
   	        }
   	      );
     	    jQuery("#foot").animate(
-    	      {height:84 + newFootHeight, marginTop:-84 -newFootHeight -12},
+    	      {height:96 + newFootHeight, marginTop:-96 -newFootHeight},
     	      400,
     	      easing
     	    );
