test widget result mailer

--- a/app/views/widget_result_mailer/notify.erb
+++ b/app/views/widget_result_mailer/notify.erb
@@ -1,7 +1,7 @@
 Hello,
 
-<%= @test_result.student_name %>
-<%= @test_result.score %>
+<%= @test_result[:student_name] %>
+<%= @test_result[:score] %>
   
 The Uniboard team
 
