widget result notifier

--- a/app/views/widget_result_mailer/notify.erb
+++ b/app/views/widget_result_mailer/notify.erb
@@ -1,10 +1,5 @@
 Hello,
 
-<%= @test_result[:student_name] %>
-<%= @test_result[:score] %>
-  
-The Uniboard team
+<%= @test_result[:student_name] %> scored <%= @test_result[:score] %> points in edu-game app.
 
-  
-  
-  
+The Uniboard team
