--- a/app/views/document_publishing/show.html.erb
+++ b/app/views/document_publishing/show.html.erb
@@ -158,7 +158,7 @@
 	        });
   	    
   	    
-  	    if(documentData.hasPdf){ 
+  	    if(!documentData.hasPdf){ 
   	      jQuery("#menu-export-hasPdf>a").addClass("disabled");
   	    }else{ 
           jQuery("#menu-export-hasPdf")
