open export links in a new window

--- a/app/views/document_publishing/show.html.erb
+++ b/app/views/document_publishing/show.html.erb
@@ -431,7 +431,7 @@
           <div id="menu-button-export-center">Export as…</div>
           <div id="menu-button-export-right"></div>
         </div>
-        <div id="menu-export-dropdown"><ul><li id="menu-export-hasPdf"><a href="#">.PDF</a></li><li id="menu-export-hasUbz"><a href="#">.UBZ</a></li></ul></div>
+        <div id="menu-export-dropdown"><ul><li id="menu-export-hasPdf"><a href="#" target="_blank">.PDF</a></li><li id="menu-export-hasUbz"><a href="#" target="_blank">.UBZ</a></li></ul></div>
       </div>
     </div>
     </div>
